syntax = "proto3";

package session.service;
option go_package = "protos/sessionpb;sessionpb";

service Session {
  rpc CreateSession(CreateSessionRequest) returns (SessionResponse);
  rpc GetSession(GetSessionRequest) returns (SessionResponse);
  rpc ListSessionsForUser(ListSessionsForUserRequest) returns (ListSessionsForUserResponse);
  rpc AddMemberToSession(AddMemberToSessionRequest) returns (EmptyResponse);
}

message CreateSessionRequest {
  string user_id = 1;
  string name = 2;
}

message GetSessionRequest {
  string session_id = 1;
}

message SessionMember {
  string user_id = 1;
  string name = 2;
  string username = 3;
}

message ListSessionsForUserRequest {
  string user_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListSessionsForUserResponse {
  repeated SessionResponse sessions = 1;
  string next_page_token = 2;
}

message SessionResponse {
  string session_id = 1;
  string name = 2;
  bool is_active = 3;
  repeated SessionMember members = 4;
  double total = 5;
}

message AddMemberToSessionRequest {
  string session_id = 1;
  string user_id = 2;
}

message EmptyResponse {}
